--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -18,14 +18,15 @@ background-color: transparent;
     height: 40px;
     width: 450px;
     border-radius: 5px;
-   padding: 10px;
-    border: none;
+    padding: 10px;
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .icon-search{
     height: 40px;
     width: 40px;
     border-radius: 5px;
-    margin-left: -40px;
+    margin-left: -60px;
     border: none;
     
 }
@@ -34,7 +35,7 @@ background-color: transparent;
     height: 40px;
     border-radius: 5px;
     border: 1px solid #EEEEEE;
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     background-color: cornflowerblue;
 }
 .hidden {
@@ -62,12 +63,24 @@ height: 20px;
 }
 
 .photo-card{
+    width: 300px;
     border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     border-radius: 5px;
-    
     text-align: center;
+    transition: transform 250ms ease;
 }
+.photo-card:hover,
+.photo-card:focus {
+    transform: scale(1.1);
+}
+.img{
+    width: 300px;
+    height: 180px;
+
+  
+}
+
 .info{
     display: flex;
     flex-wrap: wrap;
